--- a/ScriptEd/Properties/Resources.resx
+++ b/ScriptEd/Properties/Resources.resx
@@ -121,17 +121,17 @@
   <data name="light_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\light_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="faceplayer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\faceplayer.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="specialChar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\specialChar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="newBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\newBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="srtings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\srtings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="light_blue2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\light_blue2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cyan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cyan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,7 +154,10 @@
   <data name="newLine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\newLine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="close_keypress" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close_keypress.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lock_ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="white" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -169,8 +172,8 @@
   <data name="green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="newBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\newBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fontColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fontColor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="light_blue3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\light_blue3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -187,11 +190,8 @@
   <data name="navy_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\navy_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fontColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fontColor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="light_blue2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\light_blue2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="faceplayer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\faceplayer.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dark_navy_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dark_navy_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -205,7 +205,7 @@
   <data name="bg_rse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bg_rse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="close_keypress" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\close_keypress.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
